--- a/gridworld_dp.html
+++ b/gridworld_dp.html
@@ -7,15 +7,15 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <!-- jquery and jqueryui -->
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <link href="external/jquery-ui.min.css" rel="stylesheet">
   <script src="external/jquery-ui.min.js"></script>
 
   <!-- bootstrap -->
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- d3js -->
   <script type="text/javascript" src="external/d3.min.js"></script>
@@ -42,7 +42,7 @@
   ga('create', 'UA-3698471-24', 'auto');
   ga('send', 'pageview');
   </script>
-  
+
   <style>
   #wrap {
     width:800px;
@@ -71,7 +71,7 @@
     font-size: 16px;
   }
   </style>
-  
+
   <script type="application/javascript">
 
     // Gridworld
@@ -255,7 +255,7 @@
             .attr('y', ycoord + 20)
             .text('');
           tvs[s] = tv;
-        
+
           // policy arrows
           pas[s] = []
           for(var a=0;a<4;a++) {
@@ -300,7 +300,7 @@
             // highlight selected cell
             r.attr('fill', '#FF0');
           } else {
-            r.attr('fill', vcol); 
+            r.attr('fill', vcol);
           }
 
           // write reward texts
@@ -311,12 +311,12 @@
           }
 
           // skip rest for cliff
-          if(env.T[s] === 1) continue; 
+          if(env.T[s] === 1) continue;
 
           // write value
           var tv = tvs[s];
           tv.text(agent.V[s].toFixed(2));
-          
+
           // update policy arrows
           var paa = pas[s];
           for(var a=0;a<4;a++) {
@@ -369,8 +369,8 @@
           agent.updatePolicy();
           drawGrid();
         }, 100);
-      } else { 
-        clearInterval(sid); 
+      } else {
+        clearInterval(sid);
         sid = -1;
       }
     }
@@ -418,7 +418,7 @@
       (function () {
         var script = document.createElement("script");
         script.type = "text/javascript";
-        script.src  = "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+        script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
         document.getElementsByTagName("head")[0].appendChild(script);
         jaxrendered = true;
       })();
@@ -429,7 +429,7 @@
  <body onload="start();">
 
   <a href="https://github.com/karpathy/reinforcejs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
-  
+
   <!-- content -->
    <div id="wrap">
 
@@ -448,7 +448,7 @@
      </div>
 
    <h2>GridWorld: Dynamic Programming Demo</h2>
-   
+
    <div style="text-align:center;">
      <button class="btn btn-warning" onclick="evaluatePolicy()" style="width:220px;height:50px;margin-bottom:5px;">Policy Evaluation (one sweep)</button>
      <button class="btn btn-warning" onclick="updatePolicy()" style="width:170px;height:50px;margin-bottom:5px;">Policy Update</button>
@@ -471,7 +471,7 @@
 This is a toy environment called **Gridworld** that is often used as a toy model in the Reinforcement Learning literature. In this particular case:
 
 - **State space**: GridWorld has 10x10 = 100 distinct states. The start state is the top left cell. The gray cells are walls and cannot be moved to.
-- **Actions**: The agent can choose from up to 4 actions to move around. In this example 
+- **Actions**: The agent can choose from up to 4 actions to move around. In this example
 - **Environment Dynamics**: GridWorld is deterministic, leading to the same new state given each state and action
 - **Rewards**: The agent receives +1 reward when it is in the center square (the one that shows R 1.0), and -1 reward in a few states (R -1.0 is shown for these). The state with +1.0 reward is the goal state and resets the agent back to start.
 
@@ -572,7 +572,7 @@ Q^\pi (s,a) &= E\_\pi \\{ r\_t + \\gamma V^\pi(s\_{t+1}) \\mid s\_t = s, a\_t = 
 &= \sum\_{s'} \mathcal{P}\_{ss'}^a \left[ \mathcal{R}\_{ss'}^a + \\gamma V^\pi(s') \right]
 \end{align}
 
-In our Gridworld example, we are looping over all states and evaluating the Q function for each of the (up to) four possible actions. Then we update the policy to take the argmaxy actions at each state. That is, 
+In our Gridworld example, we are looping over all states and evaluating the Q function for each of the (up to) four possible actions. Then we update the policy to take the argmaxy actions at each state. That is,
 
 $$
 \pi'(s) = \arg\max_a Q(s,a)
@@ -594,9 +594,9 @@ See the GridWorld environment in this demo's source code for an example. An exam
 
 <pre><code class="js">
 // create environment
-env = new Gridworld(); 
+env = new Gridworld();
 // create the agent, yay! Discount factor 0.9
-agent = new RL.DPAgent(env, {'gamma':0.9}); 
+agent = new RL.DPAgent(env, {'gamma':0.9});
 
 // call this function repeatedly until convergence:
 agent.learn();
@@ -614,7 +614,7 @@ In practice you'll rarely see people use Dynamic Programming to solve Reinforcem
 
 However, the nice parts are that:
 
-- Everything is mathematically exact, expressible and analyzable. 
+- Everything is mathematically exact, expressible and analyzable.
 - If your problem is relatively small (maybe a few thousand states and up to few tens/hundreds actions), DP methods might be the best solution for you because they are the most stable, safest and come with simplest convergence guarantees.
 
    </div>
